# EDColonyOverlay

./: .gitignore  CMakeLists.txt  README.md  install.sh
.cursor/: rules
core/: CMakeLists.txt
core/include/edcolony/: commodities.hpp  config.hpp  handlers.hpp  http_client.hpp  journal.hpp  json.hpp  models.hpp  needs_calc.hpp  persistence.hpp  state.hpp  storage.hpp
core/include/edcolony/net/: sync.hpp
core/src/: dummy.cpp  handlers.cpp  http_client.cpp  journal.cpp  net_sync.cpp  persistence.cpp  storage.cpp
daemon/: CMakeLists.txt
daemon/src/: main.cpp
packaging/systemd/: edcolony-daemon.service
